# muscord-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/: cancellation_token.h  common.cpp  common.h  log_message.h  main.cpp  muscord.cpp  muscord.h  muscord_config.cpp  muscord_config.h  muscord_events.cpp  muscord_events.h  muscord_rpc.cpp  muscord_rpc.h  muscord_state.cpp  muscord_state.h  playerctl.cpp  playerctl.h
